--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -22,6 +22,15 @@
             style="@style/ActivityTopTextTitleStyle"
             android:layout_centerInParent="true"
             android:text="单品详情" />
+
+        <ImageView
+            android:id="@+id/iv_web_share"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:src="@mipmap/hm_web_share" />
     </RelativeLayout>
 
     <ProgressBar
