--- a/app/src/main/res/layout/fragment_mainhome.xml
+++ b/app/src/main/res/layout/fragment_mainhome.xml
@@ -42,7 +42,7 @@
                         android:textColor="#323232"
                         android:textSize="25sp" />
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -62,12 +62,13 @@
                             android:id="@+id/tv_mainhomeweather_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@+id/tv_mainhomeweather_province"
+                            android:layout_alignParentEnd="true"
+                            android:layout_below="@+id/tv_mainhomeweather_week"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="2dp"
                             android:textColor="#323232"
                             android:textSize="16sp" />
-                    </LinearLayout>
+                    </RelativeLayout>
 
 
                     <TextView
