--- a/app/src/main/res/layout/fragment_slw_private_recommend.xml
+++ b/app/src/main/res/layout/fragment_slw_private_recommend.xml
@@ -19,7 +19,7 @@
             android:text="服饰推荐"
             android:textSize="13sp" />
 
-        <TextView
+        <!--<TextView
             android:id="@+id/tv_slw_private_recommend_history"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
             android:layout_marginRight="10dp"
             android:text="推荐记录"
             android:textColor="@color/color_ac0000"
-            android:textSize="13sp" />
+            android:textSize="13sp" />-->
 
     </RelativeLayout>
 
