--- a/app/src/main/res/layout/item_shopcarself_nobody.xml
+++ b/app/src/main/res/layout/item_shopcarself_nobody.xml
@@ -9,5 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
         android:src="@mipmap/hm_shopcar_nobody" />
 </RelativeLayout>
