--- a/app/src/main/res/layout/item_shopcarself_type2.xml
+++ b/app/src/main/res/layout/item_shopcarself_type2.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="104dp"
+    android:id="@+id/rl_shopcarselftype2_detials"
     android:background="#fff">
 
     <ImageView
