--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -213,13 +213,42 @@
 
     <style name="ThemeSplash" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowBackground">@mipmap/start</item>
-       <!-- <item name="android:windowNoTitle">true</item>
-        //一定要，否则有状态栏显示，不能全屏-->
+        <!-- <item name="android:windowNoTitle">true</item>
+         //一定要，否则有状态栏显示，不能全屏-->
         <item name="android:windowFullscreen">true</item>
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
     </style>
+
     <style name="MyAppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/colorHmAppBg</item>
+    </style>
+
+    <style name="TextStyleTitle">
+        <item name="android:textColor">#323232</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="TextStyleSubTitle">
+        <item name="android:textColor">#323232</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="small_size_text_red_tip">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#ac0000</item>
+    </style>
+
+    <style name="big_size_text_normal">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#666666</item>
     </style>
 </resources>
