--- a/app/src/main/res/layout/item_hmmain_banner.xml
+++ b/app/src/main/res/layout/item_hmmain_banner.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="126dp"
-    android:background="#ac0000">
+    android:layout_height="126dp">
+
     <com.jude.rollviewpager.RollPagerView
         android:id="@+id/roll_hmmain_banner"
         android:layout_width="match_parent"
