--- a/app/src/main/res/layout/item_hmmain_recommendstudio.xml
+++ b/app/src/main/res/layout/item_hmmain_recommendstudio.xml
@@ -21,8 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_hmmain_recommend_title"
         android:layout_marginTop="12dp"
-        android:layout_marginBottom="20dp"
-        android:background="#ac0000">
+        android:layout_marginBottom="20dp">
 
     </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
