--- a/app/src/main/res/layout/activity_forget_pwdacitity.xml
+++ b/app/src/main/res/layout/activity_forget_pwdacitity.xml
@@ -68,7 +68,7 @@
                 android:layout_marginLeft="@dimen/distance"
                 android:layout_marginTop="@dimen/distance"
                 android:layout_weight="1"
-                android:background="@drawable/shape_red_4dp"
+                android:background="@drawable/shape_cicle"
                 android:text="获取验证码"
                 android:textColor="@color/main_color_write"
                 android:textSize="@dimen/text_size_15" />
@@ -91,7 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="@dimen/distance"
-            android:background="@drawable/shape_red_4dp"
+            android:background="@drawable/shape_cicle"
             android:text="确认"
             android:textColor="@color/main_color_write"
             android:textSize="@dimen/text_size_15" />
