--- a/app/src/main/res/layout/activity_hmshopmall.xml
+++ b/app/src/main/res/layout/activity_hmshopmall.xml
@@ -13,19 +13,23 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:background="#fff"></RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/rl_item_details_top"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@color/colorHmAppBg">
+            android:background="@color/activityTop">
 
-            <include layout="@layout/include_back"></include>
+            <include layout="@layout/btn_back"></include>
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/ActivityTopTextTitleStyle"
                 android:layout_centerInParent="true"
-                android:text="商城"
-                android:textColor="@color/colorTabSelect" />
+                android:text="慧美商城" />
+
         </RelativeLayout>
 
         <LinearLayout
