--- a/app/src/main/res/layout/activity_order_form.xml
+++ b/app/src/main/res/layout/activity_order_form.xml
@@ -24,24 +24,47 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="51dp"
+        android:layout_height="40dp"
         android:layout_marginTop="3dp"
         android:background="#fff">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tb_orderform_title"
             android:layout_width="match_parent"
-            android:layout_height="51dp"
+            android:layout_height="40dp"
             app:tabIndicatorHeight="0dp"
             app:tabSelectedTextColor="#ac0000">
 
         </android.support.design.widget.TabLayout>
 
-        <TextView
-            android:layout_width="2dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:background="#f7f4f4" />
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:background="#f7f4f4" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:background="#f7f4f4" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
