--- a/app/src/main/res/layout/dialog_coupon.xml
+++ b/app/src/main/res/layout/dialog_coupon.xml
@@ -32,7 +32,7 @@
         android:layout_height="40dp"
         android:layout_below="@+id/et_coupon_dialog_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/shape_red_4dp"
+        android:background="@drawable/shape_cicle"
         android:text="确定"
         android:textColor="#fff" />
 </RelativeLayout>
