--- a/app/src/main/res/layout/dialog_select_colthes_count.xml
+++ b/app/src/main/res/layout/dialog_select_colthes_count.xml
@@ -28,7 +28,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
-        android:background="@drawable/shape_red_4dp"
+        android:background="@drawable/shape_cicle"
         android:text="确定"
         android:textColor="#fff" />
 
