--- a/app/src/main/res/layout/dialog_verification_code.xml
+++ b/app/src/main/res/layout/dialog_verification_code.xml
@@ -57,7 +57,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/shape_red_4dp"
+        android:background="@drawable/shape_cicle"
         android:text="确定"
         android:textColor="#fff" />
 </RelativeLayout>
