--- a/app/src/main/res/layout/fragment_hmmain.xml
+++ b/app/src/main/res/layout/fragment_hmmain.xml
@@ -17,18 +17,33 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp">
 
-            <TextView
-                android:id="@+id/tv_hmmain_address"
-                style="@style/TextStyleSubTitle"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="北京大兴" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="14dp"
+                    android:layout_height="18dp"
+                    android:src="@mipmap/hm_main_location" />
+
+                <TextView
+                    android:id="@+id/tv_hmmain_address"
+                    style="@style/TextStyleSubTitle2"
+                    android:layout_marginLeft="5dp"
+                    android:text="定位中..." />
+
+            </LinearLayout>
 
             <TextView
-                style="@style/TextStyleTitle"
+                style="@style/TextStyleTitle2"
                 android:layout_centerInParent="true"
                 android:text="慧美衣橱" />
         </RelativeLayout>
     </RelativeLayout>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sfRefresh_hmmain"
         android:layout_width="match_parent"
@@ -37,8 +52,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_hmmain_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
 
