--- a/app/src/main/res/layout/fragment_hmshopcar.xml
+++ b/app/src/main/res/layout/fragment_hmshopcar.xml
@@ -21,7 +21,7 @@
                 style="@style/TextStyleSubTitle"
                 android:layout_alignBaseline="@+id/tv_hmshopcar_title"
                 android:layout_alignParentEnd="true"
-                android:text="编辑" />
+                android:text="管理" />
 
             <TextView
                 android:id="@+id/tv_hmshopcar_title"
@@ -81,66 +81,52 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginRight="6dp"
-                android:layout_toLeftOf="@+id/tv_hmshopcar_count"
+                android:layout_toLeftOf="@+id/rl"
                 android:gravity="center"
                 android:text="合计：¥0.00"
                 android:textColor="#323232"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/tv_hmshopcar_count"
+            <RelativeLayout
+                android:id="@+id/rl"
                 android:layout_width="136dp"
                 android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:background="#ac0000"
-                android:gravity="center"
-                android:text="去结算(0)"
-                android:textColor="#fff"
-                android:textSize="18sp" />
-        </RelativeLayout>
+                android:layout_alignParentEnd="true">
 
-        <RelativeLayout
-            android:id="@+id/rl_hmshopcar_edit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#fff"
-            android:clickable="true"
-            android:visibility="gone">
+                <TextView
+                    android:id="@+id/tv_hmshopcar_count"
+                    android:layout_width="136dp"
+                    android:layout_height="match_parent"
+                    android:background="#ac0000"
+                    android:gravity="center"
+                    android:text="去结算(0)"
+                    android:textColor="#fff"
+                    android:textSize="18sp" />
 
-            <ImageView
-                android:id="@+id/iv_mainchildshopcar_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:background="#fff"
-                android:src="@mipmap/hm_mainchildshopcar_delete" />
+                <RelativeLayout
+                    android:id="@+id/rl_hmshopcar_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#ef672c"
+                    android:clickable="true"
+                    android:visibility="gone">
 
-            <TextView
-                android:id="@+id/tv_mainchildeshopcar_tip2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="5dp"
-                android:layout_toRightOf="@+id/iv_mainchildshopcar_delete"
-                android:background="#fff"
-                android:text="¥ 0.00"
-                android:textColor="#ac0000"
-                android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/iv_mainchildshopcar_delete"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:gravity="center"
+                        android:text="删除"
+                        android:textColor="#fff"
+                        android:textSize="18sp" />
 
-            <TextView
-                android:layout_width="136dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:background="#dddddd"
-                android:gravity="center"
-                android:text="立即下单"
-                android:textColor="#fff"
-                android:textSize="18sp" />
+
+                </RelativeLayout>
+            </RelativeLayout>
 
         </RelativeLayout>
+
 
     </RelativeLayout>
 </RelativeLayout>
