--- a/app/src/main/res/layout/item_hmshopcar_recomend.xml
+++ b/app/src/main/res/layout/item_hmshopcar_recomend.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="33dp"
+    android:background="#fff"
+    android:gravity="center_vertical"
     android:orientation="vertical"
-    android:paddingBottom="10dp"
-    android:paddingRight="15dp"
-    android:paddingTop="17dp">
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/tv_itemshopcarrecommend"
@@ -17,11 +17,14 @@
         android:textSize="18sp" />
 
     <TextView
+        android:id="@+id/tv_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tv_itemshopcarrecommend"
         android:layout_alignParentEnd="true"
+        android:paddingRight="10dp"
         android:text="更多"
         android:textColor="#ac0000"
         android:textSize="14sp" />
+
 </RelativeLayout>
