--- a/app/src/main/res/layout/item_hmshopcar_shops.xml
+++ b/app/src/main/res/layout/item_hmshopcar_shops.xml
@@ -12,6 +12,7 @@
         android:layout_marginBottom="12dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="47dp"
+        android:scaleType="centerCrop"
         android:src="@mipmap/hm_shopcar_noselect" />
 
 
