--- a/app/src/main/res/layout/item_recycle_ly_main.xml
+++ b/app/src/main/res/layout/item_recycle_ly_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/rl_test"
     android:background="@drawable/shape_write_8dp"
     android:orientation="horizontal">
 
