--- a/app/src/main/res/layout/item_order_studio_normal.xml
+++ b/app/src/main/res/layout/item_order_studio_normal.xml
@@ -171,5 +171,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
         android:paddingBottom="5dp"
+        android:visibility="gone"
         android:src="@mipmap/hm_studio_star" />
 </RelativeLayout>
