--- a/app/src/main/res/layout/item_hmmain_recommendstudio.xml
+++ b/app/src/main/res/layout/item_hmmain_recommendstudio.xml
@@ -14,14 +14,25 @@
         android:text="优/质/服/务"
         android:textColor="#323232"
         android:textSize="15sp" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_hmmain_recommendstudio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <RelativeLayout
         android:layout_below="@+id/tv_hmmain_recommend_title"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="20dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_hmmain_recommendstudio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="20dp">
 
-    </android.support.v7.widget.RecyclerView>
+        </android.support.v7.widget.RecyclerView>
+
+        <ImageView
+            android:id="@+id/have_data"
+            android:background="#fff"
+            android:src="@mipmap/hmbg_nodata"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 </RelativeLayout>
