--- a/app/src/main/res/layout/item_hmmain_subrecommendstudio.xml
+++ b/app/src/main/res/layout/item_hmmain_subrecommendstudio.xml
@@ -2,24 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
     android:gravity="center"
     android:id="@+id/ll_go"
     android:orientation="vertical"
     android:paddingLeft="15dp"
     android:paddingRight="18dp">
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="70dp"
+        app:cardCornerRadius="35dp"
+        app:cardElevation="8dp"
+        android:padding="1dp"
+        app:cardPreventCornerOverlap="true"
+        android:layout_height="70dp">
 
-    <ImageView
-        android:id="@+id/iv_substudio_logo"
-        android:layout_width="67dp"
-        android:scaleType="centerCrop"
-        android:layout_height="67dp" />
+        <ImageView
+            android:id="@+id/iv_substudio_logo"
+            android:layout_width="match_parent"
+            android:scaleType="centerCrop"
+            android:layout_height="match_parent" />
+    </android.support.v7.widget.CardView>
+
 
     <TextView
         android:id="@+id/tv_substudio_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="------"
         android:textColor="#ac0000"
         android:textSize="12sp" />
@@ -28,7 +39,7 @@
         android:id="@+id/iv_substudio_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:text="------"
         android:textColor="#323232"
         android:textSize="15sp" />
